<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Open Training</string>
    <string name="workout_name">Workoutname</string>
    <string name="empty_rows">Empty columns</string>
    <string name="export">Export</string>
    <string name="settings">Settings</string>
    <string name="exercise_tags">Exercise tags</string>
    <string name="equipment">Equipment</string>
    <string name="activated_muscles">Activated muscles</string>
    <string name="exercise_name">Exercise name</string>
    <string name="image_currently_selected">Image of currently selected exercise</string>
    <string name="hint">Hint</string>
    <string name="logo_of_open_training">Logo of OpenTraining</string>
    <string name="database_managment_hint">You can download here new exercises. Each time you download new files, old ones are removed. Files are saved to the folder OpenTraining.</string>
    <string name="source">Source</string>
    <string name="add_exercise">Add exercise</string>
    <string name="download">Download</string>
    <string name="check_database">Check database</string>
    <string name="continu">Continue</string> <!-- continuE did not work -->
    <string name="no_exercise_in_databbase">There are no exercises in the database. This should not happen, please contact the developer.</string>
    <string name="choose_design">Choose the design</string>
    <string name="no_internet_connection">No internet connection available.</string>
    <string name="no_internet_connection_plan_not_shown">No internet connection available. It is possible, that the plan cannot be displayed correctly.</string>
    <string name="date">Date</string>
    <string name="create_plan">Create plan</string>
    <string name="exercise">Exercise</string>
    <string name="has_been_added">has been added</string>
    <string name="no_exercises_choosen">You did not choose any exercises.</string>
    <string name="valid_exercises">valid exercise(s)</string>
    <string name="not_valid_exercises">not valid exercise(s)</string>
    <string name="images">images</string>
    <string name="no_exercise_choosen">No exercise choosen</string>
    <string name="really_delete">Really delete?</string>
    <string name="exercise_was_removed">Exercise was removed</string>
    <string name="exerciser_wont_be_removed">Exercise was not removed</string>
    <string name="need_more_than_1">You need at least 1 exercise</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send_file">Send file</string>
    <string name="success">Success</string>
    <string name="no_success">No success</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="load_plan">Load plan</string>
    <string name="muscle">Muscle</string>
    <string name="cancel">Cancel</string>
    <string name="create_new_exercise">Create new exercise</string>
    <string name="name_required">Name required</string>
    <string name="select_muscles">Select muscles</string>
    <string name="name">Name</string>
    <string name="name_of_exercise">Name of exercise</string>
    <string name="hint_for_exercise">Hint for exercise</string>
    <string name="description">Description</string>
    <string name="description_of_exercise">Description of the exercise</string>
    <string name="tags">Tags</string>
    <string name="exercise_image">Exercise image</string>
    <string name="disclaimer">This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
    
    Especially NEVER train without professional help and consult a doctor before training.</string>
    <string name="accept">Accept</string>
    <string name="not_accept">Not accept</string>
    <string name="license">License</string>
    <string name="select_all">Select all</string>
    <string name="please_select_muscle">Please choose at least one muscle</string>
    <string name="was_choosen">was choosen</string>
    <string name="manage_exercises">Manage exercises</string>
    <string name="select_equipment">Select equipment</string>
    <string name="select_equipment_hint">Select the equipment you want to use for your training. 
        Exercises that require equipment you don\'t have will be filtered.</string>
    <string name="select_exercises">Select exercises</string>
    <string name="exercise_detail">Exercises detail</string>
    <string name="choose_equipment">Select the equipment you want to use</string>
    <string name="create">Create</string>
    <string name="create_new_exercises">Create new exercises</string>
    <string name="edit">Edit</string>
    <string name="edit_exercises">Edit exercises</string>
    <string name="download_exercises">Download exercises</string>
    <string name="edit_plan">Edit plan</string>
    <string name="waste_basket_description">This is the waste basket, drop exercises here to delete them</string>
    <string name="add_row">Add row</string>
    <string name="remove_row">Remove row</string>
    <string name="delete">Delete</string>
    <string name="change_name">Change name</string>
    <string name="please_enter_new_name">Please enter the new name for the exercise</string>
    <string name="show_exercise">Show exercise</string>
    <string name="reset_to_default">Reset to default</string>
    <string name="default_language_not_german">Please report any translation errors to littleskub@googlemail.com</string>
    
    

    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#FFFFFF</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">22dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <style name="LargeTextView">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#000000</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">22dp</item>
        <item name="android:textStyle">bold</item>
    </style>

</resources>