<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentTop="true" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/textview_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edittext_exname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_of_exercise" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wrapper_equipment"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipment"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wrapper_muscles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/wrapper_equipment"
        android:layout_toLeftOf="@+id/wrapper_exercisetags"
        android:layout_toRightOf="@+id/wrapper_equipment"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/muscle"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="550dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/wrapper_muscles"
        android:layout_alignLeft="@+id/wrapper_muscles"
        android:layout_alignRight="@+id/imageView1"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edittext_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_for_exercise" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/wrapper_muscles"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/exercise_image"
        android:src="@drawable/defaultimage" />

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView1"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignRight="@+id/imageView1"
        android:layout_alignTop="@+id/wrapper_muscles"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edittext_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/description_of_exercise"
            android:inputType="textMultiLine" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wrapper_exercisetags"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignTop="@+id/LinearLayout01"
        android:layout_toLeftOf="@+id/imageView1"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tags"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

</RelativeLayout>