<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/realativelayout_left"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:background="#00000000"
        android:padding="10dp" >

        <TextView
            android:id="@+id/textview_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/settings"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/button_export"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/wrapper_empty_rows"
            android:background="@drawable/btn_yellow"
            android:text="@string/export" />

        <LinearLayout
            android:id="@+id/wrapper_workout_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/wrapper_empty_rows"
            android:layout_below="@+id/textview_settings"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textview_workout_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workout_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edittext_workout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_blue"
                android:hint="@string/workout_name"
                android:inputType="text" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wrapper_empty_rows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/wrapper_workout_name"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textview_empty_rows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_rows"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RelativeLayout
                android:id="@+id/wrapper_empty_row_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_add_row"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/btn_green"
                    android:text="+"
                    android:textSize="30dp"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/btn_remove_row"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/btn_red"
                    android:text="-"
                    android:textSize="30dp"
                    tools:ignore="HardcodedText" />

            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalscrollview_right"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/realativelayout_left" >

        <TableLayout
            android:id="@+id/table"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/btn_green"
            android:padding="5dp" >

            <TableRow
                android:id="@+id/tablerow_0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false" >
            </TableRow>
        </TableLayout>
    </HorizontalScrollView>

</RelativeLayout>